# esipua

./: COPYING  Makefile.am  README  application.mk  configure.ac  release.mk  rules.mk
include/: Makefile.am  sdp.hrl  sipclient.hrl  yate.hrl
releases/: Makefile.am  sipb2bua.rel.in  sipclient.rel.in  sipua.rel.in  yate.rel.in
rules/: rules.mk
sipb2bua/src/: Makefile.am  sipb2bua.app-in  sipb2bua.erl
sipua/: Makefile.am
sipua/src/: Makefile.am  register_server.erl  sdp.hrl  sipcall_bye.erl  siphelper.erl  siptest.erl  sipua_sup.erl
src/: Emakefile  Makefile  Makefile.am  command.erl  key_dict.erl  key_list.erl  sdp.erl  sipclient.erl  test.erl  wrapper.c  yate.app-in  yate.erl  yate.rel  yate_app.erl  yate_call.erl  yate_clock.erl  yate_conn.erl  yate_conn_srv.erl  yate_decode.erl  yate_demo.erl  yate_demo.rel  yate_demo_app.erl  yate_demo_call.erl  yate_demo_sup.erl  yate_encode.erl  yate_notify.erl  yate_pending.erl  yate_port_srv.erl  yate_reg_srv.erl  yate_srv.erl  yate_sup.erl  yate_util.erl  ymake.erl  ysip_srv.erl
src/esipua/: Makefile.am  callregister.erl  esipua.app-in  esipua.rel  esipua_app.erl  esipua_sup.erl  register_server.erl  register_sup.erl  sdp.erl  sipb2bua.app-in  sipb2bua.erl  sipb2bua.rel  sipcall.erl  sipclient.app-in  sipclient.erl  sipclient.rel  siphelper.erl  sipregister.erl  siptest.erl  ysip_srv.erl
src/sipb2bua/: Makefile.am  sipb2bua.app-in  sipb2bua.erl  sipb2bua.rel  sipb2bua.rel.in
src/sipclient/: Makefile.am  sipclient.app-in  sipclient.erl  sipclient.rel.in  ysip_srv.erl
src/sipua/: Makefile.am  esipua.app-in  esipua.rel.in  esipua_sup.erl  register_server.erl  register_sup.erl  sipcall.erl  sipregister.erl  siptest.erl  sipua.app-in  sipua_app.erl  sipua_sup.erl
src/yate/: Makefile.am  key_list.erl  wrapper.c  yate.app-in  yate.erl  yate.hrl  yate.rel  yate_app.erl  yate_call.erl  yate_call_reg.erl  yate_conn.erl  yate_decode.erl  yate_demo.app-in  yate_demo.erl  yate_demo_call.erl  yate_demo_sup.erl  yate_encode.erl  yate_generated.hrl.in  yate_notify.erl  yate_port_srv.erl  yate_port_sup.erl  yate_reg_srv.erl  yate_srv.erl  yate_srv.hrl  yate_test.erl
src/yate-demo/: yate_demo.rel
src/yate_demo/: Makefile.am  yate_clock.erl  yate_demo.app-in  yate_demo.erl  yate_demo.rel.in  yate_demo_app.erl  yate_demo_call.erl
